tests/samples/negative/inference/return_inference_recursive.ax
module return_inference_recursive;

fn loop_value() {
    return loop_value();
}

fn main() -> i32 {
    return loop_value();
}
